--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -10,6 +10,8 @@ jobs:
   Fuzzing:
     runs-on: ubuntu-latest
     steps:
+      - name: Error
+        run: exit 1
       - name: Build Fuzzers
         id: build
         uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@04a28a41737a3a0b0f96ce0a7fcc40b7e839c507 # master
