--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -10,23 +10,24 @@ jobs:
   Fuzzing:
     runs-on: ubuntu-latest
     steps:
-      - name: Error
-        run: exit 1
-      - name: Build Fuzzers
-        id: build
-        uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@04a28a41737a3a0b0f96ce0a7fcc40b7e839c507 # master
-        with:
-          oss-fuzz-project-name: "sigstore"
-          dry-run: false
-      - name: Run Fuzzers
-        uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@04a28a41737a3a0b0f96ce0a7fcc40b7e839c507 # master
-        with:
-          oss-fuzz-project-name: "sigstore"
-          fuzz-seconds: 600
-          dry-run: false
+#       - name: Build Fuzzers
+#         id: build
+#         uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@04a28a41737a3a0b0f96ce0a7fcc40b7e839c507 # master
+#         with:
+#           oss-fuzz-project-name: "sigstore"
+#           dry-run: false
+#       - name: Run Fuzzers
+#         uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@04a28a41737a3a0b0f96ce0a7fcc40b7e839c507 # master
+#         with:
+#           oss-fuzz-project-name: "sigstore"
+#           fuzz-seconds: 600
+#           dry-run: false
+      - name: Fake Outcome
+        run: |
+          mkdir out
+          echo "test" > ./out/artifacts.txt
       - name: Upload Crash
         uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
-        if: failure() && steps.build.outcome == 'success'
         with:
           name: artifacts
           path: ./out/artifacts
