--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Fake Outcome
         run: |
           mkdir out
-          echo "test" > ./out/artifacts.txt
+          echo "test" > out/artifacts
       - name: Upload Crash
         uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
